# dtcmp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.TXT  Makefile.am  Makefile.in  README  README.md  README.rst  autogen.sh  buildme_dist  configure  configure.ac  libdtcmp.pc.in
config/: aclocal.m4  config.h.in
m4/: lx_find_mpi.m4  x_ac_lwgrp.m4
src/: Makefile.am  Makefile.in  dtcmp.c  dtcmp.h  dtcmp_internal.h  dtcmp_is_sorted.c  dtcmp_merge_2way.c  dtcmp_merge_kway_heap.c  dtcmp_ops.c  dtcmp_ops.h  dtcmp_partition.c  dtcmp_partition_local.c  dtcmp_partitionz.c  dtcmp_partitionz_list.c  dtcmp_rankv_sort.c  dtcmp_search_binary.c  dtcmp_seg_exscan.c  dtcmp_select_local_ends.c  dtcmp_select_local_randpartition.c  dtcmp_selectv_medianofmedians.c  dtcmp_selectv_rand.c  dtcmp_sort_allgather.c  dtcmp_sort_bitonic.c  dtcmp_sort_local_insertionsort.c  dtcmp_sort_local_mergesort.c  dtcmp_sort_local_qsort.c  dtcmp_sort_local_randquicksort.c  dtcmp_sort_samplesort.c  dtcmp_sortv_allgather.c  dtcmp_sortv_cheng.c  dtcmp_sortv_ranklist_cheng.c  dtcmp_sortv_sortgather_scatter.c  dtcmp_sortz_samplesort.c  dtcmp_uniqify.c  dtcmp_util.c  main.c  makefile  ranklist_allgather_brucks.c  ranklist_allreduce_recursive.c  ranklist_alltoall_brucks.c  (+4 more)
